Fixed demo and changed the eslint config.

--- a/demos/dashboards-investment-screener/demo.css
+++ b/demos/dashboards-investment-screener/demo.css
@@ -45,3 +45,19 @@ body {
 #dashboard-col-1 {
     height: 500px;
 }
+
+.filters-row>button {
+    background: #f2f2f2;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 0.8rem;
+    padding: 0.5rem 1.5rem;
+    margin: 0.5rem -5px 0.5rem 10px;
+    transition: background 250ms;
+}
+
+.filters-row>button:hover {
+    background: #e6e6e6;
+}
