--- a/demos/xray_wip/demo.css
+++ b/demos/xray_wip/demo.css
@@ -2,6 +2,10 @@
 @import url("https://code.highcharts.com/css/highcharts.css");
 @import url("https://code.highcharts.com/dashboards/css/dashboards.css");
 
+#container {
+    height: 1000px;
+}
+
 body {
     font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, sans-serif;
 }
