--- a/demos/dashboards-investor-preferences/demo.css
+++ b/demos/dashboards-investor-preferences/demo.css
@@ -1,5 +1,4 @@
 @import url("https://code.highcharts.com/dashboards/css/datagrid.css");
-@import url("https://code.highcharts.com/css/highcharts.css");
 @import url("https://code.highcharts.com/dashboards/css/dashboards.css");
 
 body {
@@ -76,4 +75,17 @@ body {
 
 .filters-row>button[disabled]:hover {
     background: #f2f2f2;
+}
+
+.st0 {
+    fill: none;
+    stroke: var(--highcharts-neutral-color-60);
+    stroke-width: 2;
+    stroke-miterlimit: 10;
+}
+
+@media (prefers-color-scheme: dark) {
+    .st0 {
+        stroke: var(--highcharts-neutral-color-100);
+    }
 }
