--- a/demos/dashboards-investor-preferences/demo.css
+++ b/demos/dashboards-investor-preferences/demo.css
@@ -30,6 +30,10 @@ body {
     border-bottom: none;
 }
 
+.highcharts-datagrid-table td.user-pref {
+    text-align: center;
+}
+
 @media screen and (max-width: 1000px) {
     .row {
         flex-direction: column;
