Added scrollbar to the demo list for smaller devices.

--- a/demos/styles.css
+++ b/demos/styles.css
@@ -150,3 +150,9 @@ iframe {
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (max-height: 800px) {
+    .sidebar-navigation {
+        overflow-y: scroll;
+    }
+}
