--- a/demos/styles.css
+++ b/demos/styles.css
@@ -95,6 +95,7 @@ iframe {
     border-radius: 8px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    overflow-y: auto;
 }
 
 .sidebar h2 {
@@ -149,10 +150,4 @@ iframe {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-@media screen and (max-height: 800px) {
-    .sidebar-navigation {
-        overflow-y: scroll;
-    }
 }
