--- a/demos/styles.css
+++ b/demos/styles.css
@@ -95,6 +95,7 @@ iframe {
     border-radius: 8px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    overflow-y: auto;
 }
 
 .sidebar h2 {
