Added loading, implemented new logic in all demos.

--- a/demos/dashboards-compare-asset-allocations/demo.css
+++ b/demos/dashboards-compare-asset-allocations/demo.css
@@ -1,1 +1,13 @@
 @import url("https://code.highcharts.com/dashboards/css/dashboards.css");
+
+body {
+    font-family: sans-serif;
+}
+
+#postman-message {
+    display: none;
+}
+
+#loading-label {
+    display: none;
+}
