Added Other asset aloocation types, added underly holdings in demo.

--- a/demos/dashboards-xray-benchmark/demo.css
+++ b/demos/dashboards-xray-benchmark/demo.css
@@ -44,7 +44,7 @@ body {
     border-bottom: none;
 }
 
-#dashboard-col-0, #dashboard-col-6 {
+#dashboard-col-0, #dashboard-col-6, #dashboard-col-7 {
     height: 370px;
 }
 
